--- a/Titanic Regresión Logística.ipynb
+++ b/Titanic Regresión Logística.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb537f79",
+   "id": "5b988105",
    "metadata": {},
    "source": [
-    "# Problema Clasificacion Titanic"
+    "# Problema Clasificacion logistica Titanic"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84e16c9f",
+   "id": "491d66cf",
    "metadata": {},
    "source": [
     "# Carga de librerías:"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a834e6f",
+   "id": "859feaad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7f4c4fb",
+   "id": "b4eab95e",
    "metadata": {},
    "source": [
     "# Definición de funciones:"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc6c9de2",
+   "id": "7b99bda4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a21c2f75",
+   "id": "b5788fc3",
    "metadata": {},
    "source": [
     "# Lectura de datos:"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4d33a90",
+   "id": "75dee8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e9824437",
+   "id": "91b6726b",
    "metadata": {
     "scrolled": false
    },
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2105cf4b",
+   "id": "6348f109",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "31351a22",
+   "id": "4e7006b5",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1b712250",
+   "id": "8ef0d6a4",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fed3e295",
+   "id": "72fb40c0",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9c997e",
+   "id": "0df01298",
    "metadata": {},
    "source": [
     "# Preprocesamiento de datos"
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4793fa8d",
+   "id": "5a2bef93",
    "metadata": {},
    "source": [
     "# Missings:"
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d81f0ce",
+   "id": "3c8bdd11",
    "metadata": {
     "scrolled": true
    },
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cc046bac",
+   "id": "d95306bf",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "99e9514a",
+   "id": "2dacefaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2ed814fd",
+   "id": "96dd347e",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "371bc7d6",
+   "id": "48536267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6f44ea77",
+   "id": "3a68228c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "198b51ca",
+   "id": "25d85139",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55c445d0",
+   "id": "6450b49c",
    "metadata": {},
    "source": [
     "# Comprobación tipos no numéricos:"
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0e528231",
+   "id": "4d8a10f4",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4499c1",
+   "id": "4c94022b",
    "metadata": {},
    "source": [
     "# Division en features X + target Y"
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f7f55c02",
+   "id": "42c6eaff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "170b258c",
+   "id": "6b522e2e",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10019016",
+   "id": "8bb3d185",
    "metadata": {},
    "source": [
     "# Boxplots:"
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8f9f154f",
+   "id": "d7147020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e487352d",
+   "id": "fb6f7d0b",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aab682df",
+   "id": "f3ae2583",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e44f025",
+   "id": "fb5ce43d",
    "metadata": {},
    "source": [
     "# Histogramas:"
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a7ecb6cd",
+   "id": "e4fa6e6a",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "650dfee9",
+   "id": "f6dda15c",
    "metadata": {},
    "source": [
     "# Relación variable vs target:"
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3747021c",
+   "id": "89ac1392",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1790e665",
+   "id": "fa088114",
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97f2c29a",
+   "id": "70cbaa2c",
    "metadata": {},
    "source": [
     "Estos gráficos son interesantes para analizar el poder predictivo de las variables. Cuanto más se separen las dos distribuciones, mejor para predecir ya que es más fácil discriminarlas."
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eea5dab1",
+   "id": "83a18fe2",
    "metadata": {},
    "source": [
     "# Matriz de correlaciones:"
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2622939f",
+   "id": "86a96500",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11f7d683",
+   "id": "dd372e22",
    "metadata": {},
    "source": [
     "# Variables con mayor correlación con la target:"
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5f674064",
+   "id": "f430ec22",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7143c5d8",
+   "id": "cf21ae3a",
    "metadata": {},
    "source": [
     "# Estandarización de los datos previa:"
@@ -1242,14 +1242,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad55a7eb",
+   "id": "0232812e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "aa82c80d",
+   "id": "43330498",
    "metadata": {},
    "source": [
     "Como se comenta en la unidad, hay modelos que parten de la hipótesis que los datos son centrados y, por tanto, se necesita estandarizar. Suele ser una buena práctica porque no suele perjudicar.\n",
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c751fd5d",
+   "id": "e3f5d0e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0be089",
+   "id": "d33e5c53",
    "metadata": {},
    "source": [
     "# División en train y test:"
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e80b7c",
+   "id": "d1a647ae",
    "metadata": {},
    "source": [
     "# Aplicamos un modelo de regresión logística"
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ecceeb6e",
+   "id": "094d4821",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "65ca1e12",
+   "id": "d307ba89",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "876eff94",
+   "id": "d6511fb9",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a2d3f970",
+   "id": "a43f5646",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "290e1dee",
+   "id": "3b8a3abb",
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30047e6c",
+   "id": "726ccc42",
    "metadata": {},
    "source": [
     "# Analizando el modelo con el mejor alpha"
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99a44cb",
+   "id": "0ff9210b",
    "metadata": {},
    "source": [
     "En este paso nos quedamos con los mejores parámetros obtenidos en el paso anterior:"
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6c8a4f6e",
+   "id": "03c74f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3c18ff",
+   "id": "786385d2",
    "metadata": {},
    "source": [
     "Ajusto a todos los datos de entrenamiento."
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6c7aebde",
+   "id": "ddb1374e",
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09684ab6",
+   "id": "4de212f9",
    "metadata": {},
    "source": [
     "# Predicción"
@@ -1443,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1f90fb4c",
+   "id": "4f54e977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "22f0dd02",
+   "id": "ae7684b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4ef2d2bf",
+   "id": "19c5e478",
    "metadata": {},
    "outputs": [
     {
