Update Titanic Regresión Logística.ipynb

--- a/Titanic Regresión Logística.ipynb
+++ b/Titanic Regresión Logística.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b988105",
+   "id": "494a4767",
    "metadata": {},
    "source": [
     "# Problema Clasificacion logistica Titanic"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "491d66cf",
+   "id": "43854033",
    "metadata": {},
    "source": [
     "# Carga de librerías:"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "859feaad",
+   "id": "2d22d4a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4eab95e",
+   "id": "3bc57d10",
    "metadata": {},
    "source": [
     "# Definición de funciones:"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7b99bda4",
+   "id": "76096df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5788fc3",
+   "id": "5611d552",
    "metadata": {},
    "source": [
     "# Lectura de datos:"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "75dee8cb",
+   "id": "e9b9dcf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "91b6726b",
+   "id": "1f7e3956",
    "metadata": {
     "scrolled": false
    },
@@ -274,13 +274,13 @@
     }
    ],
    "source": [
-    "XY_train.head()\n"
+    "XY_train.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6348f109",
+   "id": "a918a6d7",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4e7006b5",
+   "id": "e8260fdd",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8ef0d6a4",
+   "id": "7b1df06e",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "72fb40c0",
+   "id": "a0b2455e",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df01298",
+   "id": "eeadd041",
    "metadata": {},
    "source": [
     "# Preprocesamiento de datos"
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a2bef93",
+   "id": "532a321f",
    "metadata": {},
    "source": [
     "# Missings:"
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3c8bdd11",
+   "id": "f11b78b3",
    "metadata": {
     "scrolled": true
    },
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d95306bf",
+   "id": "d5157948",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2dacefaf",
+   "id": "4152edc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "96dd347e",
+   "id": "88a6f718",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "48536267",
+   "id": "0cc2e758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3a68228c",
+   "id": "d6639aca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "25d85139",
+   "id": "287a37a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6450b49c",
+   "id": "5fb50b06",
    "metadata": {},
    "source": [
     "# Comprobación tipos no numéricos:"
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4d8a10f4",
+   "id": "60a2e5d5",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c94022b",
+   "id": "20cdc96f",
    "metadata": {},
    "source": [
     "# Division en features X + target Y"
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "42c6eaff",
+   "id": "a2886947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6b522e2e",
+   "id": "9e12e50c",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bb3d185",
+   "id": "61baa1f5",
    "metadata": {},
    "source": [
     "# Boxplots:"
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d7147020",
+   "id": "4301ceea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fb6f7d0b",
+   "id": "a227120c",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f3ae2583",
+   "id": "6d648b20",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb5ce43d",
+   "id": "53aa7e87",
    "metadata": {},
    "source": [
     "# Histogramas:"
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e4fa6e6a",
+   "id": "f9225633",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6dda15c",
+   "id": "a8f11859",
    "metadata": {},
    "source": [
     "# Relación variable vs target:"
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "89ac1392",
+   "id": "389719fa",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fa088114",
+   "id": "42185bf8",
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70cbaa2c",
+   "id": "fa768fd5",
    "metadata": {},
    "source": [
     "Estos gráficos son interesantes para analizar el poder predictivo de las variables. Cuanto más se separen las dos distribuciones, mejor para predecir ya que es más fácil discriminarlas."
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83a18fe2",
+   "id": "c8d6c132",
    "metadata": {},
    "source": [
     "# Matriz de correlaciones:"
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "86a96500",
+   "id": "8b91cc4a",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd372e22",
+   "id": "5fa52c92",
    "metadata": {},
    "source": [
     "# Variables con mayor correlación con la target:"
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f430ec22",
+   "id": "aca9a533",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf21ae3a",
+   "id": "f041141a",
    "metadata": {},
    "source": [
     "# Estandarización de los datos previa:"
@@ -1242,14 +1242,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0232812e",
+   "id": "b6166159",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "43330498",
+   "id": "07533728",
    "metadata": {},
    "source": [
     "Como se comenta en la unidad, hay modelos que parten de la hipótesis que los datos son centrados y, por tanto, se necesita estandarizar. Suele ser una buena práctica porque no suele perjudicar.\n",
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e3f5d0e8",
+   "id": "ec278fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d33e5c53",
+   "id": "1341fb6a",
    "metadata": {},
    "source": [
     "# División en train y test:"
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a647ae",
+   "id": "7dc79ada",
    "metadata": {},
    "source": [
     "# Aplicamos un modelo de regresión logística"
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "094d4821",
+   "id": "5aff9fb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d307ba89",
+   "id": "8eae62d7",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d6511fb9",
+   "id": "d3134e78",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a43f5646",
+   "id": "ba89966b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3b8a3abb",
+   "id": "c4c257b1",
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726ccc42",
+   "id": "02789f11",
    "metadata": {},
    "source": [
     "# Analizando el modelo con el mejor alpha"
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff9210b",
+   "id": "2bed8c3b",
    "metadata": {},
    "source": [
     "En este paso nos quedamos con los mejores parámetros obtenidos en el paso anterior:"
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "03c74f8b",
+   "id": "6c316f5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "786385d2",
+   "id": "6d452d20",
    "metadata": {},
    "source": [
     "Ajusto a todos los datos de entrenamiento."
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ddb1374e",
+   "id": "65078ceb",
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de212f9",
+   "id": "ecc8b39f",
    "metadata": {},
    "source": [
     "# Predicción"
@@ -1443,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4f54e977",
+   "id": "230bc3f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ae7684b3",
+   "id": "c10109b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "19c5e478",
+   "id": "b9ad0d6a",
    "metadata": {},
    "outputs": [
     {
