--- a/Titanic Regresión Logística.ipynb
+++ b/Titanic Regresión Logística.ipynb
@@ -58,8 +58,8 @@
     "    en X en función a la variable Y\n",
     "    '''\n",
     "    fig_tot = (len(X.columns))\n",
-    "    fig_por_fila = 4.\n",
-    "    tamanio_fig = 4.\n",
+    "    fig_por_fila = 4\n",
+    "    tamanio_fig = 4\n",
     "    num_filas = int( np.ceil(fig_tot/fig_por_fila) )    \n",
     "    plt.figure( figsize=( fig_por_fila*tamanio_fig+5, num_filas*tamanio_fig+5 ) )\n",
     "    c = 0 \n",
@@ -89,7 +89,7 @@
     "    según su valor de y sea 1 o 0\n",
     "    '''\n",
     "    fig_tot = len(x.columns)\n",
-    "    fig_tot_fila = 4.; fig_tamanio = 4.\n",
+    "    fig_tot_fila = 4; fig_tamanio = 4\n",
     "    num_filas = int( np.ceil(fig_tot/fig_tot_fila) )\n",
     "    plt.figure( figsize=( fig_tot_fila*fig_tamanio+2, num_filas*fig_tamanio+2 ) )\n",
     "    target_neg, target_pos = targets\n",
@@ -126,14 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b1c12d3d",
+   "id": "e31911ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "#MAC\n",
     "\n",
-    "XY_train = pd.read_csv('/Users/aitorelordizamora/Documents/input/train.csv', sep=',')\n",
-    "XY_test = pd.read_csv('/Users/aitorelordizamora/Documents/input/test.csv', sep=',')\n"
+    "XY_train = pd.read_csv('/Users/aitorelordizamora/Documents/input/titanic/train.csv', sep=',')\n",
+    "XY_test = pd.read_csv('/Users/aitorelordizamora/Documents/input/titanic/test.csv', sep=',')\n"
    ]
   },
   {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d34a37c9",
+   "id": "1dda1d8a",
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33963392",
+   "id": "f5bc1995",
    "metadata": {},
    "outputs": [],
    "source": []
