--- a/Natural Language Processing with Disaster Tweets.ipynb
+++ b/Natural Language Processing with Disaster Tweets.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1255bce0",
+   "id": "575c15ce",
    "metadata": {},
    "source": [
     "# Natural Language Processing with Disaster Tweets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aebafa06",
+   "metadata": {},
+   "source": [
+    "# Competition Description\n",
+    "\n",
+    "Twitter has become an important communication channel in times of emergency.\n",
+    "The ubiquitousness of smartphones enables people to announce an emergency they’re observing in real-time. Because of this, more agencies are interested in programatically monitoring Twitter (i.e. disaster relief organizations and news agencies).\n",
+    "\n",
+    "But, it’s not always clear whether a person’s words are actually announcing a disaster. Take this example:"
    ]
   },
   {
@@ -272,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bfb3afb",
+   "id": "a8d3d0e5",
    "metadata": {},
    "source": [
     "# Bolsa de Palabras\n",
@@ -305,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a56920c",
+   "id": "47ed0171",
    "metadata": {},
    "source": [
     "# Particionado de Datos (Train y Test)\n",
@@ -320,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7e1276d1",
+   "id": "10a90ccf",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7faf06a",
+   "id": "219c4e4e",
    "metadata": {},
    "source": [
     "# Creacción del Modelo\n",
@@ -369,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "97a16897",
+   "id": "9375c95d",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f29cd01a",
+   "id": "95139cda",
    "metadata": {},
    "source": [
     "# Evaluación del Modelo\n",
@@ -430,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e5e11cdb",
+   "id": "d3226764",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261e619f",
+   "id": "2e7ec2ea",
    "metadata": {},
    "source": [
     "Representamos las métricas para los diferentes modelos en un gráfico de barras:"
@@ -635,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f64cd5a8",
+   "id": "c217a883",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11b86cdb",
+   "id": "c5831b93",
    "metadata": {},
    "source": [
     "Veamos las matrices de confusión de los modelos"
@@ -690,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f0faed94",
+   "id": "f287ef80",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "60474b71",
+   "id": "8151a339",
    "metadata": {
     "scrolled": false
    },
@@ -996,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4333be",
+   "id": "cb8fa624",
    "metadata": {},
    "source": [
     "# Predicción"
@@ -1005,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "727c8069",
+   "id": "d708c70f",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9931b968",
+   "id": "cc789c3b",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43beeaf5",
+   "id": "1ffef589",
    "metadata": {},
    "outputs": [],
    "source": []
